# DealOS-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py  graph.py  nodes.py  state.py
backend/app/ai/embeddings/: embedding_service.py
backend/app/ai/extractors/: __init__.py  company_extractor.py  financial_extractor.py  risk_extractor.py
backend/app/ai/retrieval/: __init__.py  bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_retriever.py
backend/app/api/middleware/: audit.py  auth.py  error_handler.py  rate_limit.py
backend/app/api/v1/: analysis.py  auth.py  chat.py  companies.py  documents.py  router.py  search.py  users.py
backend/app/background/: __init__.py  document_processor.py
backend/app/core/: __init__.py  constants.py  exceptions.py  permissions.py  security.py
backend/app/document_processing/chunkers/: text_chunker.py
backend/app/document_processing/parsers/: docx_parser.py  excel_parser.py  pdf_parser.py  pptx_parser.py
backend/app/repositories/: __init__.py  audit_repository.py  base.py  chat_repository.py  chunk_repository.py  company_repository.py  document_repository.py  financial_metric_repository.py  risk_finding_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  chat.py  common.py  company.py  company_intelligence.py  document.py  financial.py  risk.py  search.py  user.py
backend/app/services/: auth_service.py  chat_service.py  company_analysis_service.py  company_service.py  document_service.py  financial_analysis_service.py  processing_service.py  risk_analysis_service.py  search_service.py  user_service.py
backend/app/storage/: __init__.py  base.py  local_storage.py  minio_storage.py
backend/scripts/: init-db.sql
backend/tests/: conftest.py  factories.py
(+77 files in other folders)
